Fixed server list header

--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -1,5 +1,5 @@
 <md-content>
-	<div layout="row" layout-padding="">
+	<div id="serverListHeader" layout="row" layout-padding="">
 			<input ng-model="multiplayermenu.searchText" ng-change="multiplayermenu.repopulate();" type="text" id="search" name="search" placeholder="Search"/>
 			<md-button id="refresh-button" class="button servers-button" ng-class="" ng-click="multiplayer.refreshList()">{{:: 'ui.multiplayer.refresh' | translate}}</md-button>
 
@@ -51,9 +51,9 @@
 
 		<md-divider></md-divider>
 	</div>
-
+	
 	<table id="serversTable">
-		<thead>
+		<thead id="serversTableHead">
 			<tr id="header">
 				<th onclick="sortTable('location', false)">{{:: 'ui.multiplayer.location' | translate}}</th>
 				<th onclick="sortTable('sname', false)">{{:: 'ui.multiplayer.description' | translate}}</th>
@@ -112,7 +112,7 @@
 			<tr><td class="loading-shimmer" colspan="4"></td></tr>
 		</tbody>
 	</table>
-
+	
 	<div id="footer">
 		<span id="TEMPAREA" style="display:none;"></span>
 		<span id="TEMPNODE" style="display:none;"></span>
