--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -298,8 +298,8 @@
     <input mdInput type="number" ng-model="options.data.values.launcherPort" min="1024" max="65535" step="1"
       aria-label="_" ng-change="options.applyState()"/>
   </md-input-container>
-  <span ng-if="options.data.values.launcherPort != 4444" style="margin-left:15px">{{:: 'ui.options.multiplayer.launcherPortDefaultPort' | translate}}</span>
-  <span ng-if="options.data.values.launcherPort == 4444" style="margin-left:15px">({{:: 'ui.common.default' | translate}})</span>
+  <span ng-if="options.data.values.launcherPort != 4444">{{:: 'ui.options.multiplayer.launcherPortDefaultPort' | translate}}</span>
+  <span ng-if="options.data.values.launcherPort == 4444">({{:: 'ui.common.default' | translate}})</span>
 </md-list-item>
 
 <!--<md-list-item md-no-ink>
