Added togglable player ID option.

--- a/ui/modules/apps/BeamMP-PlayerList/app.html
+++ b/ui/modules/apps/BeamMP-PlayerList/app.html
@@ -91,7 +91,7 @@
 		<div id="plist-container">
 			<table id="players-table">
 				<tr>
-					<th colspan="1">ID</th>
+					<th colspan="1" ng-show="showPlayerIDs">ID</th>
 					<th colspan="3">
 						Players
 						<button class="buttons direction-buttons" ng-click="plSwapHorizontal()">🡘</button>
