--- a/ui/modules/multiplayer/tos.partial.html
+++ b/ui/modules/multiplayer/tos.partial.html
@@ -52,7 +52,7 @@
     <h2>{{ 'ui.multiplayertos.tos' | translate }}</h2>
     <div style="padding-bottom: 10px; display: inline-block; text-align: justify;">
 	  <span bng-translate="ui.multiplayertos.tos.description1"></span>
-	  <a href="http-external://forum.beammp.com/topic/94/terms-of-use-v1-0" ng-click="openExternalLink('https://forum.beammp.com/topic/94/terms-of-use-v1-0')">here</a>.
+	  <a ng-click="openExternalLink('https://forum.beammp.com/topic/94/terms-of-use-v1-0')">here</a>.
 	  <span bng-translate="ui.multiplayertos.tos.description2"></span>
 	</div>
     <div style="display: flex;">
@@ -71,7 +71,7 @@
     </div>
     <div style="padding-bottom: 10px; display: inline-block; text-align: justify;">
 	  <span bng-translate="ui.multiplayertos.rules.description1"></span>
-	  <a href="http-external://forum.beammp.com/topic/29/rules-please-read" ng-click="openExternalLink('https://forum.beammp.com/t/beammp-rules/282059')">here</a>.
+	  <a ng-click="openExternalLink('https://docs.beammp.com/community/rules/')">here</a>.
 	  <span bng-translate="ui.multiplayertos.rules.description2"></span>
 	</div>
     <div style="display: flex">
@@ -88,9 +88,9 @@
       <md-divider style="border-color: rgb(62, 62, 62);"></md-divider>
 	  <div style="padding-bottom: 10px; display: inline-block; text-align: justify;">
 	    <span bng-translate="ui.multiplayertos.info1"></span>
-	    <a href="http-external://www.beammp.com" ng-click="openExternalLink('https://www.beammp.com')">official website</a>.
+	    <a  ng-click="openExternalLink('https://www.beammp.com')">official website</a>.
 	    <span bng-translate="ui.multiplayertos.info2"></span>
-	    <a href="http-external://www.discord.gg/beammp" ng-click="openExternalLink('https://www.discord.gg/beammp')">official discord</a>.
+	    <a ng-click="openExternalLink('https://www.discord.gg/beammp')">official discord</a>.
 	  </div>
       <div style="margin-bottom: 1em;margin-top: 1em; display: flex">
         <span style="flex: 1 1;"></span>
