Change locale key from wiki to docs and update EN translation

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -75,7 +75,7 @@
 
         <md-button id="forum-btn" onclick="openExternalLink(`https://docs.beammp.com`)" ng-class="" style="text-align:left;">
           <md-icon class="material-icons">link</md-icon>
-          {{:: 'ui.multiplayer.wiki' | translate}}
+          {{:: 'ui.multiplayer.docs' | translate}}
         </md-button>
 
         <md-button id="forum-btn" onclick="openExternalLink(`https://forum.beammp.com`)" ng-class="" style="text-align:left;">
