Change documentation icon

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -74,7 +74,7 @@
         <md-divider></md-divider>
 
         <md-button id="forum-btn" onclick="openExternalLink(`https://docs.beammp.com`)" ng-class="" style="text-align:left;">
-          <md-icon class="material-icons">link</md-icon>
+          <md-icon class="material-icons">description</md-icon>
           {{:: 'ui.multiplayer.docs' | translate}}
         </md-button>
 
