Rename css style to make more sense

--- a/ui/modules/multiplayer/featured.partial.html
+++ b/ui/modules/multiplayer/featured.partial.html
@@ -25,7 +25,7 @@
 			</md-checkbox>
 
 
-			<md-select id="map-select" ng-model="multiplayermenu.selectMap" placeholder="All" class="md-no-underline dropdown" ng-change="multiplayermenu.repopulate();">
+			<md-select id="filter-dropdown" ng-model="multiplayermenu.selectMap" placeholder="All" class="md-no-underline dropdown" ng-change="multiplayermenu.repopulate();">
 				<md-tooltip md-direction="right">
 					{{:: 'ui.multiplayer.mapFilterTooltip' | translate}}
 				</md-tooltip>
@@ -36,7 +36,7 @@
 			</md-select>
 
 			
-			<md-select id="map-select" ng-model="multiplayermenu.serverVersions" multiple placeholder="All" class="md-no-underline dropdown" ng-change="multiplayermenu.repopulate();"></md-select>
+			<md-select id="filter-dropdown" ng-model="multiplayermenu.serverVersions" multiple placeholder="All" class="md-no-underline dropdown" ng-change="multiplayermenu.repopulate();"></md-select>
 				<md-tooltip md-direction="right">
 					{{:: 'ui.multiplayer.serverVersionFilterTooltip' | translate}}
 				</md-tooltip>
