Remove rogue html tag

--- a/ui/modules/multiplayer/featured.partial.html
+++ b/ui/modules/multiplayer/featured.partial.html
@@ -36,7 +36,7 @@
 			</md-select>
 
 			
-			<md-select id="filter-dropdown" ng-model="multiplayermenu.serverVersions" multiple placeholder="All" class="md-no-underline dropdown" ng-change="multiplayermenu.repopulate();"></md-select>
+			<md-select id="filter-dropdown" ng-model="multiplayermenu.serverVersions" multiple placeholder="All" class="md-no-underline dropdown" ng-change="multiplayermenu.repopulate();">
 				<md-tooltip md-direction="right">
 					{{:: 'ui.multiplayer.serverVersionFilterTooltip' | translate}}
 				</md-tooltip>
