Fix map column becoming too tiny

--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -69,7 +69,7 @@
 				<tr id="header">
 					<th onclick="sortTable('location', false)">{{:: 'ui.multiplayer.location' | translate}}</th>
 					<th onclick="sortTable('sname', false)">{{:: 'ui.multiplayer.description' | translate}}</th>
-					<th onclick="sortTable('map', false)">{{:: 'ui.multiplayer.map' | translate}}</th>
+					<th onclick="sortTable('map', false)" style="min-width: 200px;">{{:: 'ui.multiplayer.map' | translate}}</th>
 					<th onclick="sortTable('players', true)">{{:: 'ui.multiplayer.players' | translate}}</th>
 				</tr>
 			</thead>
