Fix add custom server dialog

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -20,7 +20,7 @@
 		<input type="text" id="customFavName" name="customFavName" placeholder="Custom server"/>
 		<input type="text" id="customFavIP" name="customFavIP" placeholder="Server IP"/>
 		<input type="text" id="customFavPort" name="customFavPort" placeholder="Server port" value="30814"/>
-		<md-button class="button" ng-click="multiplayer.addCustomServer()" style="margin: 0px;">{{:: 'ui.multiplayer.save' | translate}}</md-button>
+		<md-button class="button" ng-click="multiplayer.addCustomServer()" style="margin-top: 20px;">{{:: 'ui.multiplayer.save' | translate}}</md-button>
 	</center>
 </div>
 
